fix(card): update className .delete for custom red. fix(button): change hover/visible box-shadow to black for visibility

--- a/src/Button/button.module.css
+++ b/src/Button/button.module.css
@@ -12,5 +12,5 @@
 .btn:hover, .btn:focus-visible{
     transform: translateY(-5px);
     outline: none;
-    box-shadow: 6px 6px 10px white;
+    box-shadow: 6px 6px 10px black;
 }
